Wstępne zrytmikarzowanie motywu

--- a/src/_sass/components/_post_list.scss
+++ b/src/_sass/components/_post_list.scss
@@ -1,7 +1,7 @@
 // post-list
 .post_list {
   .td_title {
-    text-transform: capitalize;
+    text-transform: none;
     @include simple_link_style;
   }
   .td_date {
