--- a/src/_includes/background.html
+++ b/src/_includes/background.html
@@ -7,24 +7,31 @@ var c = document.getElementById("c");
 var ctx = c.getContext("2d");
 c.height = window.innerHeight;
 c.width = window.innerWidth;
-var txts = "{{site.bgtext}}";
-txts = txts.split("");
+var txtsraw = "{{site.bgtext}}";
+txts = txtsraw.split("");
 var font_size = 12;
 var columns = c.width / font_size;
 var drops = [];
+var texId = [];
 for (var x = 0; x < columns; x++) drops[x] = 1;
+for (var x = 0; x < columns; x++) texId[x] = 0;
 
 function draw() {
   ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
   ctx.fillRect(0, 0, c.width, c.height);
-  ctx.fillStyle = "#490";
+  ctx.fillStyle = "#EEB736";
   ctx.font = font_size + "px arial";
   for (var i = 0; i < drops.length; i++) {
-    var text = txts[Math.floor(Math.random() * txts.length)];
-    ctx.fillText(text, i * font_size, drops[i] * font_size);
-    if (drops[i] * font_size > c.height || Math.random() > 0.98) drops[i] = 0;
+
+    ctx.fillText(txtsraw[texId[i]], i * font_size, drops[i] * font_size);
+    texId[i]++;
+    if (texId[i] >= txts.length){texId[i]=0};
+    
+    if (drops[i] * font_size > c.height || Math.random() > 0.98){
+      drops[i] = 0; 
+    } 
     drops[i]++;
   }
 }
-setInterval(draw, 20);
+setInterval(draw, 30);
 </script>
