--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -11,7 +11,7 @@
               <a class="header_btn" onclick="open_collection_list()">
                 <i class="fa btn_icon fa-bars">
                   {% if page.btn_text != false %}
-                  <p class="btn_text">Archives</p>
+                  <p class="btn_text">Archiwum X</p>
                   {% endif %}
                 </i>
               </a>
@@ -21,7 +21,7 @@
               <a class="header_btn" href="{{ site.url }}{{ site.baseurl }}">
                 <i class="fa btn_icon fa-home">
                   {% if page.btn_text != false %}
-                  <p class="btn_text">Home</p>
+                  <p class="btn_text">powrót na główną</p>
                   {% endif %}
                 </i>
               </a>
