--- a/src/_sass/components/_collection_list.scss
+++ b/src/_sass/components/_collection_list.scss
@@ -50,7 +50,7 @@
         vertical-align: middle;
       }
       #clh_title {
-        text-transform: capitalize;
+        text-transform:none;
       }
     }
     .close_btn {
@@ -150,7 +150,7 @@
     padding: 0;
     font-size: $font-size-h3;
     line-height: 160%;
-    text-transform: capitalize;
+    text-transform: none;
     padding: 5px 0;
     @include simple_link_style;
   }
@@ -165,7 +165,7 @@
   .h_collection_label {
     margin: 0 0 0.5em 0;
     font-size: $font-size-h6;
-    text-transform: capitalize;
+    text-transform: none;
     border-bottom: $thin-border;
   }
 }
