--- a/src/_sass/components/_header.scss
+++ b/src/_sass/components/_header.scss
@@ -63,7 +63,7 @@
     font-style: normal;
     margin: 0;
     display: inline-block;
-    text-transform: capitalize;
+    text-transform: none;
     font-family: $font-serif;
     font-size: $header-btn-text-size;
   }
