Aktualizacja FontAwesome do 6.5.2

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -4,9 +4,19 @@
       <!-- email -->
       {% if site.email %}
       <a class="footer_btn" href="mailto://{{ site.email }}">
-        <i class="fa fa-envelope-square">
+        <i class="fab fa-envelope-square">
           {% if page.btn_text != false %}
           <p>Email</p>
+          {% endif %}
+        </i>
+      </a>
+      {% endif %}
+      <!-- discord -->
+      {% if site.discord %}
+      <a class="footer_btn" href="{{ site.discord }}">
+        <i class="fab fa-discord">
+          {% if page.btn_text != false %}
+          <p>Discord</p>
           {% endif %}
         </i>
       </a>
@@ -17,7 +27,7 @@
         class="footer_btn"
         href="https://www.linkedin.com/in/{{ site.linkedin }}"
       >
-        <i class="fa fa-linkedin">
+        <i class="fab fa-linkedin">
           {% if page.btn_text != false %}
           <p>LinkedIn</p>
           {% endif %}
@@ -27,7 +37,7 @@
       <!-- github -->
       {% if site.github %}
       <a class="footer_btn" href="https://github.com/{{ site.github }}">
-        <i class="fa fa-github">
+        <i class="fab fa-github">
           {% if page.btn_text != false %}
           <p>Github</p>
           {% endif %}
@@ -37,7 +47,7 @@
       <!-- gitlab -->
       {% if site.gitlab %}
       <a class="footer_btn" href="https://gitlab.com/{{ site.gitlab }}">
-        <i class="fa fa-gitlab">
+        <i class="fab fa-gitlab">
           {% if page.btn_text != false %}
           <p>Gitlab</p>
           {% endif %}
@@ -47,7 +57,7 @@
       <!-- website -->
       {% if site.website %}
       <a class="footer_btn" href="{{ site.website }}">
-        <i class="fa fa-link">
+        <i class="fab fa-link">
           {% if page.btn_text != false %}
           <p>Website</p>
           {% endif %}
@@ -57,7 +67,7 @@
       <!-- twitter -->
       {% if site.twitter %}
       <a class="footer_btn" href="https://twitter.com/{{ site.twitter }}">
-        <i class="fa fa-twitter">
+        <i class="fab fa-twitter">
           {% if page.btn_text != false %}
           <p>Twitter</p>
           {% endif %}
@@ -67,7 +77,7 @@
       <!-- facebook -->
       {% if site.facebook %}
       <a class="footer_btn" href="https://www.facebook.com/{{ site.facebook }}">
-        <i class="fa fa-facebook">
+        <i class="fab fa-facebook">
           {% if page.btn_text != false %}
           <p>Facebook</p>
           {% endif %}
@@ -77,7 +87,7 @@
       <!-- instagram -->
       {% if site.instagram %}
       <a class="footer_btn" href="https://instagram.com/{{ site.instagram }}">
-        <i class="fa fa-instagram">
+        <i class="fab fa-instagram">
           {% if page.btn_text != false %}
           <p>Instagram</p>
           {% endif %}
@@ -90,7 +100,7 @@
         class="footer_btn"
         href="https://www.youtube.com/user/{{ site.youtube }}"
       >
-        <i class="fa fa-youtube">
+        <i class="fab fa-youtube">
           {% if page.btn_text != false %}
           <p>Youtube</p>
           {% endif %}
@@ -103,7 +113,7 @@
         class="footer_btn"
         href="https://steamcommunity.com/id/{{ site.steam }}"
       >
-        <i class="fa fa-steam">
+        <i class="fab fa-steam">
           {% if page.btn_text != false %}
           <p>Steam</p>
           {% endif %}
@@ -113,7 +123,7 @@
       <!-- weibo -->
       {% if site.weibo %}
       <a class="footer_btn" href="https://weibo.com/u/{{ site.weibo }}">
-        <i class="fa fa-weibo">
+        <i class="fab fa-weibo">
           {% if page.btn_text != false %}
           <p>Weibo</p>
           {% endif %}
