--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -27,7 +27,9 @@
     <!-- global stylesheet -->
     <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/src/assets/css/main.css" type="text/css"/>
     <!-- fa 5.9.0 -->
-    <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/src/assets/css/fa.min.css" type="text/css"/>
+    <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/src/assets/fontawesome/css/fontawesome.css" type="text/css"/>
+    <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/src/assets/fontawesome/css/brands.css" type="text/css"/>
+    <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/src/assets/fontawesome/css/solids.css" type="text/css"/>
     <!-- global script -->
     <script src="{{site.url}}{{site.baseurl}}/src/assets/js/main.js" async></script>
     <!-- mathjax 2.7.5 -->
