Poprawka FA solid i ikonki domku tam gdzie jest

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -19,7 +19,7 @@
               <!-- home -->
               {% if page.home_btn != false %}
               <a class="header_btn" href="{{ site.url }}{{ site.baseurl }}">
-                <i class="fa btn_icon fa-home">
+                <i class="fa-solid fa-house">
                   {% if page.btn_text != false %}
                   <p class="btn_text">powrót na główną</p>
                   {% endif %}
