--- a/src/_includes/collection_list.html
+++ b/src/_includes/collection_list.html
@@ -10,7 +10,7 @@
     &nbsp; -->
         <table class="collection_list_header_title">
             <tr>
-                <td>Archiwum:</td>
+                <td>Archiwum X:</td>
                 <td id="clh_title"></td>
             </tr>
         </table>
