--- a/src/_layouts/collections.html
+++ b/src/_layouts/collections.html
@@ -9,14 +9,16 @@ author: ""
 encrypted_text: false
 ---
 <div class="collection_list">
-<h1>Collections</h1>
+<h1>Archiwum X</h1>
 {% for collection in site.collections %}
+    {% unless collection.label == "posts" %}
     <h2>{{collection.label}}</h2>
     {% for post in collection.docs %}
         <p>
             &nbsp;&nbsp;
             <a class="a_title" href="{{site.url}}{{site.baseurl}}{{post.url}}">{{post.title}}</a>  
         </p>
-    {% endfor %}
+        {% endfor %}
+    {% endunless %}
 {% endfor %}
 </div>
