--- a/src/_sass/abstracts/_variables.scss
+++ b/src/_sass/abstracts/_variables.scss
@@ -1,5 +1,7 @@
 // global variables
 $color-primary: rgb(255, 30, 20);
+$color-text: rgb(255, 255, 255);
+$color-link: rgb(255, 128, 128);
 $color-secondary: rgb(221, 60, 40);
 $color-blockquote: #e0ac3c;
 $color-warning: rgb(238, 63, 40);
