Parę fixów ogólnych - poprawiony tekst w tle (teraz z jakiegoś powodu nie laguje) - linki elementów kolekcji teraz bez slasha na końcu - sortowanie wewnątrz kolekcji teraz jest według daty a nie ostatniej aktualizacji - usunięte www z linku do facebooka - data we wpisach teraz w formacie ISO - poprawki CSSowe (linki i przestrzenie między akapitami) - dodane obrazki emotek, hehe

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -76,7 +76,7 @@
       {% endif %}
       <!-- facebook -->
       {% if site.facebook %}
-      <a class="footer_btn" href="https://www.facebook.com/{{ site.facebook }}">
+      <a class="footer_btn" href="https://facebook.com/{{ site.facebook }}">
         <i class="fab fa-facebook">
           {% if page.btn_text != false %}
           <p>Facebook</p>
